feat: 编辑图片面板支持预览编辑效果
